# cubix_software_sft

./: .env  .gitignore  README.md  api-tester.http  docker-compose.dev.yml  docker-compose.proud.yml  docker-compose.yml  nginx.conf  tester.http
backend/: .env  .gitignore  Dockerfile  app.py  auth_controller.py  backend.py  database.py  db_alter.py  docker-compose.yml  my_database.db  portfolio_controller.py  pyproject.toml  requirements.txt  stock.py  test_stock.py  token_manager.py
backend/controller/: auth_controller.py  portfolio_controller.py
backend/db/: db.py  db_config.py  portfolio.db  portfolios.db
backend/middleware/: auth.py
backend/model/: company.py  portfolio.py  share.py  user.py
backend/portfolio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/routes/: auth.py  stock.py
backend/tests/: test_auth.py  test_stock.py
data/: Dockerfile  WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-1074925151632927115.wt  collection-0-11114059966619834563.wt  collection-0-8878865672527516195.wt  collection-2-1074925151632927115.wt  collection-4-1074925151632927115.wt  collection-7-1074925151632927115.wt  index-1-1074925151632927115.wt  index-1-11114059966619834563.wt  index-1-8878865672527516195.wt  index-3-1074925151632927115.wt  index-5-1074925151632927115.wt  index-6-1074925151632927115.wt  index-8-1074925151632927115.wt  index-9-1074925151632927115.wt  portfolio.db  sizeStorer.wt
docs/: architecure.puml
frontend/: Dockerfile  app.vue  nuxt.config.ts  package-lock.json  package.json
nginx/: default.conf
(+66 files in other folders)
