[build-system]
requires = ["setuptools>=42", "wheel"]  # Építési függőségek
build-backend = "setuptools.build_meta"

[project]
name = "portfolio"
version = "0.1.0"
description = "Ez a projekt leírása"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

dependencies = [  # Függőségek listázása
    "flask",
    "bcrypt",
    "PyJWT",
    "peewee",
    "flask-cors",
    "yfinance",
]
