[build-system]
requires = ["setuptools>=42", "wheel"]  # Építési függőségek
build-backend = "setuptools.build_meta"

[project]
name = "portfolio"
version = "0.1.0"
description = "Portfolió"
authors = [
    { name = "Kovács Péter", email = "kpeter1994@gmail.com" }
    { name = "Fehér Péter", email = "feher.peter.lazlo@gmail.com" }
]

dependencies = [  # Függőségek listázása
    "flask",
    "bcrypt",
    "PyJWT",
    "peewee",
    "flask-cors",
    "yfinance",
]
